force-app/main/default/objects/Sync_Log__c.object
<CustomObject>
    <fields>
        <fullName>Applications_Synced__c</fullName>
        <label>Applications Synced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Candidates_Synced__c</fullName>
        <label>Candidates Synced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jobs_Synced__c</fullName>
        <label>Jobs Synced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Sync_Date_Time__c</fullName>
        <label>Last Sync Date/Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Greenhouse Sync Log</label>
    <nameField>
        <displayFormat>SNL-{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Greenhouse Sync Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>